<resources>
    <string name="app_name">KeeBiometrics</string>
    <string name="action_settings">Settings</string>
    <string name="host_identity_descriptor">Host-ID:</string>
    <string name="add_host_dialog_title">Add Host</string>
    <string name="host_display_name_hint">Display name</string>
    <string name="delete">Delete</string>
    <string name="delete_host_dialog_title">Delete Host</string>
    <string name="delete_host_dialog_content_confirm">Are you sure you want to delete host \'%s\'?</string>
    <string name="delete_host_dialog_content_host_missing">Host can\'t be deleted because it doesn\'t exist.</string>
    <string name="host_identity_clipboard_label">Host-ID</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="clipboard_unavailable">Clipboard unavailable</string>
    <string name="host_changed_due_to_update_of_repository">Host-under-edit changed due to update of the host list.</string>
    <string name="use_qr_code_setup">Use QR-Code</string>
    <string name="use_manual_setup">Manual setup (for advanced users)</string>
    <string name="binding_error_formatting_public_key">&lt;error formatting public key: \'%s1\'&gt;</string>
    <string name="scan_host_qr_code">Scan QR-Code</string>
    <string name="qr_code_setup_explanation">Set up your device as a <i>trusted device</i> by simply scanning the QR-code generated by the <b>KeeBiometrics</b> KeePass-plugin.</string>
    <string name="manual_setup_explanation">This setup allows you to manually generate a private/public-keypair whichever way you prefer. Note however that your public-key has to be formatted in the <i>DER</i>-encoding for the parser to understand it.\As an example you can convert your standard RSA id-file generated by\n<tt>$ ssh-keygen -t rsa</tt>\nto a <b>KeeBiometrics</b> compatible public-key-file using\n<tt>$ openssl rsa -in id_rsa -pubout -outform DER pub.der</tt>\nThe resulting <tt>pub.der</tt> can then be imported using the functionality provided below.</string>
    <string name="add_host">Add Host</string>
    <string name="created_on_descriptor">Created on:</string>
    <string name="host_name_descriptor">Host name:</string>
    <string name="database_name_descriptor">Database name:</string>
    <string name="host_already_exists">Host already exists! A host with the same host-name and public-key already exists.</string>
    <string name="host_swiped_for_deletion">%s has been deleted!</string>
    <string name="undo">UNDO</string>
    <string name="lock_settings">Security Settings</string>
    <string name="lock_title">Security Warning</string>
    <string name="lock_body">Secure lock screen has not yet been set up. To continue using this app, please go to Settings and set up a lock screen.</string>
    <string name="lock_exit">Exit</string>
    <string name="pref_encrypted_identity_key">encrypted_identity_key</string>
</resources>
