<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.gokhlayeh.keebiometrics.viewmodel.AddHostViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ui.AddHostFragment">

        <EditText
            android:id="@+id/forcedDisplayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/host_display_name_hint"
            android:inputType="textAutoComplete"
            android:text="@{viewModel.keePassHostBuilder.forcedDisplayName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:checkedButton="@+id/useQrCodeSetup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forcedDisplayName">

            <RadioButton
                android:id="@+id/useQrCodeSetup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="@{viewModel.useQrCodeSetupObservable}"
                android:text="@string/use_qr_code_setup" />

            <RadioButton
                android:id="@+id/useManualSetup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="@{!viewModel.useQrCodeSetupObservable}"
                android:text="@string/use_manual_setup" />

        </RadioGroup>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/manualSetup"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:visibility="@{!viewModel.useQrCodeSetupObservable}"
            app:layout_constraintBottom_toTopOf="@id/addHost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <TextView
                android:id="@+id/manualSetupExplanation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/manual_setup_explanation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_editor_absoluteX="100dp"
                app:layout_editor_absoluteY="100dp" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/qrCodeSetup"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:visibility="@{viewModel.useQrCodeSetupObservable}"
            app:layout_constraintBottom_toTopOf="@id/addHost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <TextView
                android:id="@+id/qrCodeExplanation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/qr_code_setup_explanation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/scanQrCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/scan_host_qr_code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/qrCodeExplanation" />

            <TextView
                android:id="@+id/hostId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@{viewModel.keePassHostBuilder.publicKey}"
                android:typeface="monospace"
                app:layout_constraintBottom_toBottomOf="@+id/scanQrCode"
                app:layout_constraintEnd_toStartOf="@+id/scanQrCode"
                app:layout_constraintStart_toEndOf="@+id/hostIdDescriptor"
                app:layout_constraintTop_toTopOf="@+id/scanQrCode" />

            <TextView
                android:id="@+id/hostIdDescriptor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/host_identity_descriptor"
                app:layout_constraintBottom_toBottomOf="@+id/hostId"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/hostId" />

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/addHost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/add_host"
            android:enabled="@{viewModel.keePassHostBuilder.publicKey != null}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/saveOngoing"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="@{viewModel.isSavingOngoing}"
            app:layout_constraintBottom_toTopOf="@+id/addHost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/forcedDisplayName" />
    </android.support.constraint.ConstraintLayout>
</layout>